--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,7 @@ target/
 /nbdist/
 /.nb-gradle/
 build/
-src/main/java/com/yaf/who/config/
+src/main/java/com/yaf/who/config/AmazonConfig.java
 
 ### VS Code ###
 .vscode/
