--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,11 @@
 			<version>6.3.3</version>
 		</dependency>
 
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.2.4</version>
+		</dependency>
 
 	</dependencies>
 
